# open-trade-gateway

./: .gitignore  CMakeLists.txt  Makefile  README.rst  open_trade_gateway.rc  open_trade_gateway.sln  open_trade_gateway.vcxproj  open_trade_gateway.vcxproj.filters  replace.sh  resource.h  todo
conf/: broker_list.json.example  brokers.json.example  config-condition-order.json.example  config-ms-bids.json.example  config-ms.json.example  config.json.example
doc/: Makefile  conf.py  index.rst  make.bat  todo.txt
open-trade-common/: SerializerTradeBase.cpp  SerializerTradeBase.h  condition_order_manager.cpp  condition_order_manager.h  condition_order_serializer.cpp  condition_order_serializer.h  condition_order_type.cpp  condition_order_type.h  config.cpp  config.h  datetime.cpp  datetime.h  encoding.cpp  encoding.h  http.cpp  http.h  iconvpp.h  ins_list.cpp  ins_list.h  log.cpp  log.h  numset.cpp  numset.h  rapid_serialize.h  types.h  utility.cpp  utility.h  version.h
open-trade-ctp/: ctp_define.cpp  ctp_define.h  main.cpp  tradectp.cpp  tradectp.h  tradectp1.cpp  tradectp2.cpp  tradectp3.cpp
open-trade-ctpse/: ctp_define.cpp  ctp_define.h  main.cpp  tradectp.cpp  tradectp.h  tradectp1.cpp  tradectp2.cpp  tradectp3.cpp
open-trade-ctpse15/: ctp_define.cpp  ctp_define.h  main.cpp  tradectp.cpp  tradectp.h  tradectp1.cpp  tradectp2.cpp  tradectp3.cpp
open-trade-ctpsopt/: ctp_define.cpp  ctp_define.h  main.cpp  tradectp.cpp  tradectp.h
open-trade-gateway-ms/: client_connection.cpp  client_connection.h  client_connection_manager.cpp  client_connection_manager.h  main.cpp  (+4 more)
(+110 files in other folders)
